# gactk-rs

./: Cargo.toml  LICENSE  README.md
archive/2023/01/12/: sketch.rs
src/: lib.rs
src/geometry/: antwerp.rs  lineSegment2.rs  mod.rs  poly2.rs  vec2.rs
src/math/: mod.rs  polynomial.rs
src/numerics/: constants.rs  estimation.rs  mod.rs
